Fixed box shadow and aligned content

--- a/Task_2/style.css
+++ b/Task_2/style.css
@@ -94,6 +94,12 @@ body {
   padding: 2rem 0rem;
 }
 
+.pricing-header > h1 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -159,10 +165,15 @@ header {
   align-items: flex-start;
 }
 
+/* border-radius: 12px;
+background: var(--Primary-Blue-500, #1D4ED8);
+box-shadow: 0px 10px 25px 0px #CCD9FF; */
+
 .cards .card.active {
   background: #1d4ed8;
   color: #fff;
   display: flex;
+  box-shadow: 0px 10px 25px 0px #ccd9ff;
   align-items: flex-start;
   flex-direction: column;
   z-index: 1;
